--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
               <li class="nav-item">
                 <a class="nav-link p-3" data-toggle="list" href="#food1" role="tab">Plates</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link p-3" data-toggle="list" href="#drinks" role="tab">Drinks</a>
-              </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link p-3" data-toggle="list" href="#salads" role="tab">Salads</a>
+              </li> -->
+              <li class="nav-item">
+                <a class="nav-link p-3" data-toggle="list" href="#apps" role="tab">Kids Meals & Sides</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" data-toggle="list" href="#other" role="tab">Other</a>
-              </li>
+                  <a class="nav-link p-3" data-toggle="list" href="#drinks" role="tab">Drinks</a>
+                </li>
             </ul>
 
             <!-- Tab panes -->
@@ -329,36 +329,36 @@
                         <div class="row">
                           <div class="col-lg-10">
                             <h3 class="pb_font-18 font-weight-bold">Fountain Soda</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <p class="mb-0">Pepsi Products (add something maybe)</p>
                           </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>10.95</span></div>
+                          <div class="col-lg-2"><span class="price"><sup>$</sup>1.99</span></div>
                         </div>
                       </li>
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Fresh Juices</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <h3 class="pb_font-18 font-weight-bold">SoBe</h3>
+                            <p class="mb-0">(nothing here?)</p>
                           </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>12.50</span></div>
+                          <div class="col-lg-2"><span class="price"><sup>$</sup>2.00</span></div>
                         </div>
                       </li>
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Coffee/Tea</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <h3 class="pb_font-18 font-weight-bold">Yogurt Drink</h3>
+                            <p class="mb-0">nothing here?</p>
                           </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>5.35</span></div>
+                          <div class="col-lg-2"><span class="price"><sup>$</sup>2.45</span></div>
                         </div>
                       </li>
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Unsweetened Tea</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <h3 class="pb_font-18 font-weight-bold">Draft Beer</h3>
+                            <p class="mb-0">Beer options? need to look up</p>
                           </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>12.50</span></div>
+                          <div class="col-lg-2"><span class="price"><sup>$</sup>4.95</span></div>
                         </div>
                       </li>
                     </ul>
@@ -368,37 +368,38 @@
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Fountain Soda</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <h3 class="pb_font-18 font-weight-bold">Wine Glass</h3>
+                            <p class="mb-0">wine options?</p>
                           </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>10.95</span></div>
+                          <div class="col-lg-2"><span class="price"><sup>$</sup>4.50</span></div>
                         </div>
                       </li>
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Fresh Juices</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <h3 class="pb_font-18 font-weight-bold">Bottled Juices</h3>
+                            <p class="mb-0">nothing here?</p>
                           </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>12.50</span></div>
+                          <div class="col-lg-2"><span class="price"><sup>$</sup>1.99</span></div>
                         </div>
                       </li>
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Coffee/Tea</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <h2>Desserts? test area</h2>
+                            <h3 class="pb_font-18 font-weight-bold">Baklava</h3>
+                            <p class="mb-0">nothing here</p>
                           </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>5.35</span></div>
+                          <div class="col-lg-2"><span class="price"><sup>$</sup>3.50</span></div>
                         </div>
                       </li>
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Unsweetened Tea</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <h3 class="pb_font-18 font-weight-bold"></h3>
+                            <p class="mb-0"></p>
                           </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>12.50</span></div>
+                          <div class="col-lg-2"><span class="price"><sup>$</sup></span></div>
                         </div>
                       </li>
                     </ul>
@@ -406,7 +407,7 @@
                 </div>
               </div>
 
-<!-- New tab for SALAD menu items -->
+<!-- New tab for apps menu items -->
               <div class="tab-pane fade" id="apps" role="tabpanel">
                 <div class="row">
                   <div class="col-md">
@@ -497,6 +498,8 @@
         </div>
       </div>
 
+
+<!-- This is the section for the sides and other!! -->
 
     </section>
     <!-- END section -->
