--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="col-lg-4 pl-lg-5 pl-lg-0">
             <h2 class="mb-4 text-uppercase pb_letter-spacing-2">Meet the Owner</h2>
             <p>Owner Solomon Sarhadi started Gyros & More back in 2008, after spending 21 years working for the fast food giant Carl's Jr.
-              After over two decades of corporate service, Sarhadi decided it was time be his own boss.
+              After over two decades of corporate service, Sarhadi decided it was time to be his own boss.
                 Gyros & More specializes in Mediterranean and Middle Eastern food. The crowd favorite is the classic gyro. Served with either lamb or chicken, the gyro sandwich is a collection of meat, tomatoes, lettuce, onions, creamy tzatziki sauce all served on fresh pita bread. Along with gyros, the restaurant serves up kabobs, falafel, sandwiches and salads
 .</p>
 
@@ -115,9 +115,9 @@
               <li class="nav-item">
                 <a class="nav-link p-3" data-toggle="list" href="#food1" role="tab">Plates</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link p-3" data-toggle="list" href="#drinks" role="tab">Kids Meals & Sides</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                   <a class="nav-link p-3" data-toggle="list" href="#drinks" role="tab">Drinks</a>
                 </li>
@@ -441,6 +441,20 @@
                           <div class="col-lg-2"><span class="price"><sup>$</sup>3.95</span></div>
                         </div>
                       </li>
+                      
+                      
+                      <!-- this is a test! -->
+                      <li>
+                        <div class="row">
+                          <div class="col-lg-10">
+                            <h3 class="pb_font-18 font-weight-bold">Salad</h3>
+                            <p class="mb-0">Choose between our Classic Gyro, Chicken, Greek, Falafel or Fish Salad</p>
+                          </div>
+                          <div class="col-lg-2"><span class="price"><sup>$</sup>9.95</span></div>
+                        </div>
+                      </li>
+
+
                     </ul>
                   </div>
                   <div class="col-md">
@@ -481,6 +495,21 @@
                           <div class="col-lg-2"><span class="price"><sup>$</sup>4.95</span></div>
                         </div>
                       </li>
+
+<!-- This is test 2 -->
+
+
+<li>
+  <div class="row">
+    <div class="col-lg-10">
+      <h3 class="pb_font-18 font-weight-bold">Sides</h3>
+      <p class="mb-0">Choose between a side of Rice, Fries or Onion Rings</p>
+    </div>
+    <div class="col-lg-2"><span class="price"><sup>$</sup>3.50</span></div>
+  </div>
+</li>
+
+
                     </ul>
                   </div>
                 </div>
