--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 
 
 
-    <section class="pb_md_py_cover text-center cover-bg-black cover-bg-opacity-4" style="background-image: url(assets/images/logo5.png)" id="section-home">
+    <section class="pb_md_py_cover text-center cover-bg-opacity-4" style="background-color: #128ff5" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-9  order-md-1">
