--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/restaurant.css">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 
 
 
@@ -157,7 +159,7 @@
                         <div class="row">
                           <div class="col-lg-10">
                             <h3 class="pb_font-18 font-weight-bold">Falafel Gyro</h3>
-                            <p class="mb-0">Garbanzo & Fava Beans seasoned & deep fried with Hummus, Cucumber Sauce, Tomatoes, Onions & LEttuce</p>
+                            <p class="mb-0">Garbanzo & Fava Beans seasoned & deep fried with Hummus, Cucumber Sauce, Tomatoes, Onions & Lettuce</p>
                           </div>
                           <div class="col-lg-2"><span class="price"><sup>$</sup>6.99</span></div>
                         </div>
@@ -195,7 +197,7 @@
                         <div class="row">
                           <div class="col-lg-10">
                             <h3 class="pb_font-18 font-weight-bold">Philly Cheese Steak</h3>
-                            <p class="mb-0">Shaved Beed Steak with Sauteéd Onions, Cheese & Lettuce Wrapped in a Pita Bread</p>
+                            <p class="mb-0">Shaved Beef Steak with Sauteéd Onions, Cheese & Lettuce Wrapped in a Pita Bread</p>
                           </div>
                           <div class="col-lg-2"><span class="price"><sup>$</sup>6.99</span></div>
                         </div>
@@ -650,7 +652,7 @@
       <div class="d-flex">
         <div class="pb_half py-5">
           <div class="row justify-content-center mb-5">
-            <div class="col-md-10 text-center">
+            <div class="col-md-10 col-sm-12 text-center">
               <h2 class="mb-4 text-uppercase pb_letter-spacing-2">Contact Us</h2>
             </div>
           </div>
@@ -682,7 +684,7 @@
         </div>
         
         <!-- this is the div for the map! -->
-        <div class="pb_half py-5"> 
+        <div class="pb_half py-5 "> 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.437552237196!2d-120.88305034942422!3d37.521181734383504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809107427adf0239%3A0xbef803e6f8f5ecc7!2s3160+Countryside+Dr%2C+Turlock%2C+CA+95380!5e0!3m2!1sen!2sus!4v1556142073827!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
         
@@ -690,11 +692,6 @@
 
     </section>
     <!-- END section -->
-
-
-
-
-
 
 
 
