--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/restaurant.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 
 
 
@@ -159,7 +159,7 @@
                         <div class="row">
                           <div class="col-lg-10">
                             <h3 class="pb_font-18 font-weight-bold">Falafel Gyro</h3>
-                            <p class="mb-0">Garbanzo & Fava Beans seasoned & deep fried with Hummus, Cucumber Sauce, Tomatoes, Onions & Lettuce</p>
+                            <p class="mb-0">Garbanzo & Fava Beans seasoned & deep fried with Hummus, Cucumber Sauce, Tomatoes, Onions & LEttuce</p>
                           </div>
                           <div class="col-lg-2"><span class="price"><sup>$</sup>6.99</span></div>
                         </div>
@@ -197,7 +197,7 @@
                         <div class="row">
                           <div class="col-lg-10">
                             <h3 class="pb_font-18 font-weight-bold">Philly Cheese Steak</h3>
-                            <p class="mb-0">Shaved Beef Steak with Sauteéd Onions, Cheese & Lettuce Wrapped in a Pita Bread</p>
+                            <p class="mb-0">Shaved Beed Steak with Sauteéd Onions, Cheese & Lettuce Wrapped in a Pita Bread</p>
                           </div>
                           <div class="col-lg-2"><span class="price"><sup>$</sup>6.99</span></div>
                         </div>
