--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <div class="row">
                           <div class="col-lg-10">
                             <h3 class="pb_font-18 font-weight-bold">Falafel Gyro</h3>
-                            <p class="mb-0">Garbanzo & Fava Beans seasoned & deep fried with Hummus, Cucumber Sauce, Tomatoes, Onions & LEttuce</p>
+                            <p class="mb-0">Garbanzo & Fava Beans seasoned & deep fried with Hummus, Cucumber Sauce, Tomatoes, Onions & Lettuce</p>
                           </div>
                           <div class="col-lg-2"><span class="price"><sup>$</sup>6.99</span></div>
                         </div>
@@ -197,7 +197,7 @@
                         <div class="row">
                           <div class="col-lg-10">
                             <h3 class="pb_font-18 font-weight-bold">Philly Cheese Steak</h3>
-                            <p class="mb-0">Shaved Beed Steak with Sauteéd Onions, Cheese & Lettuce Wrapped in a Pita Bread</p>
+                            <p class="mb-0">Shaved Beef Steak with Sauteéd Onions, Cheese & Lettuce Wrapped in a Pita Bread</p>
                           </div>
                           <div class="col-lg-2"><span class="price"><sup>$</sup>6.99</span></div>
                         </div>
